--- a/Tienda Generica v1/src/main/webapp/css/login.css
+++ b/Tienda Generica v1/src/main/webapp/css/login.css
@@ -2,6 +2,8 @@
 .fondo {
 	background-image: url('../imagenes/7.jpeg');
 	background-size:cover;
+    background-color: beige;
+    background-attachment: fixed;
 }
 .InicioSesion {
 	font-family:Garamond;
